Mantaflow adaptative domain takes objects with the flow turned off into account #73567

Closed
opened 2020-02-03 17:15:25 +01:00 by SecuoyaEx · 4 comments

System Information
Operating system: Windows-10-10.0.18362-SP0 64 Bits
Graphics card: GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 436.15

Blender Version
Broken: version: 2.82 (sub 6), branch: master, commit date: 2020-02-02 08:28, hash: f51286cb8c
Worked: (optional)

Short description of error
The adaptative domain in mantaflow scales up to cover objects with "Use Inflow" turned off that have never emmited smoke, wasting performance in the process. Fixing this would be useful for animated flow objects that sometimes emit and sometimes don't

Exact steps for others to reproduce the error
Open the file, select the domain and bake the simulation. MantaflowDomain.blend

Mantaflow.png

**System Information** Operating system: Windows-10-10.0.18362-SP0 64 Bits Graphics card: GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 436.15 **Blender Version** Broken: version: 2.82 (sub 6), branch: master, commit date: 2020-02-02 08:28, hash: `f51286cb8c` Worked: (optional) **Short description of error** The adaptative domain in mantaflow scales up to cover objects with "Use Inflow" turned off that have never emmited smoke, wasting performance in the process. Fixing this would be useful for animated flow objects that sometimes emit and sometimes don't **Exact steps for others to reproduce the error** Open the file, select the domain and bake the simulation. [MantaflowDomain.blend](https://archive.blender.org/developer/F8319232/MantaflowDomain.blend) ![Mantaflow.png](https://archive.blender.org/developer/F8319233/Mantaflow.png)
Author

Added subscriber: @SecuoyaEx

Added subscriber: @SecuoyaEx
Member

Added subscriber: @sebbas

Added subscriber: @sebbas

This issue was referenced by e3f8c887fb

This issue was referenced by e3f8c887fb528fb495e12d4da5ded6be1ecc6154

Changed status from 'Needs Triage' to: 'Resolved'

Changed status from 'Needs Triage' to: 'Resolved'
Sebastián Barschkis self-assigned this 2020-02-04 12:02:42 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#73567
No description provided.