Fix T73567: Mantaflow adaptative domain takes objects with the flow turned off into account

This is a small optimization that makes sure the adaptive domain only considers active inflow objects. Ones with disabled fluid flow are skipped and thus the adaptive domain will not try to cover them.